fix : se ha corregido errores del codigo

--- a/index.html
+++ b/index.html
@@ -1,81 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FerreMax | Todo en Herramientas</title>
-
-<link rel="stylesheet" href="style.css">
-
-
+    <meta charset="UTF-8">
+    <title>FerreMax </title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
-    <div class="logo">
-        <i class="fas fa-tools"></i> FERRE<span>MAX</span>
-    </div>
+    <div class="logo"><span>FerreMax </span></div>
     <nav>
-        <a href="#">Inicio</a>
-        <a href="#productos">Productos</a>
-        <a href="#contacto">Contacto</a>
+        <a href="#inicio">  Inicio  </a>
+        <a href="#productos">  Productos  </a>
+        <a href="masproductos.html" class="btn-nav">  Ver más productos  </a>
+        <a href="#contacto">  Contactos</a>
     </nav>
 </header>
 
-<section class="hero">
+<section class="hero" id="inicio">
     <div class="hero-content">
-        <h1>LAS MEJORES <span>HERRAMIENTAS</span></h1>
-        <p>Todo lo que necesitas para construcción, carpintería y hogar.</p>
-        <a href="#productos" class="btn">Ver Productos</a>
+        <h1>Bienvenido a  <span>FerreMax </span></h1>
+        <a href="#productos" class="btn">Seguir Viendo</a>
     </div>
 </section>
 
 <section class="section" id="productos">
-    <h2>NUESTROS <span>PRODUCTOS</span></h2>
+    <h2>Nuestros <span>Productos</span></h2>
 
     <div class="productos">
 
-        <div class="card">
-            <i class="fas fa-hammer"></i>
-            <h3>Martillo Profesional</h3>
-            <p>Alta resistencia para trabajos pesados.</p>
-            <div class="precio">$15.99</div>
+    <div class="card">
+        <h3>Martillo Profesional</h3>
+        <p class="precio">$15</p>
+        <div class="detalle">
+            <p>Martillo de acero reforzado con mango ergonómico antideslizante. Ideal para trabajos de construcción y carpintería.</p>
+            <button class="btn-comprar">Comprar</button>
         </div>
+    </div>
 
-        <div class="card">
-            <i class="fas fa-screwdriver"></i>
-            <h3>Taladro Eléctrico</h3>
-            <p>Potente y eficiente para cualquier proyecto.</p>
-            <div class="precio">$89.99</div>
+    <div class="card">
+        <h3>Taladro Eléctrico 500W</h3>
+        <p class="precio">$45</p>
+        <div class="detalle">
+            <p>Taladro eléctrico de alta potencia con velocidad ajustable. Perfecto para madera, metal y concreto.</p>
+            <button class="btn-comprar">Comprar</button>
         </div>
+    </div>
 
-        <div class="card">
-            <i class="fas fa-toolbox"></i>
-            <h3>Caja de Herramientas</h3>
-            <p>Organiza todo tu equipo fácilmente.</p>
-            <div class="precio">$39.99</div>
+    <div class="card">
+        <h3>Juego de Destornilladores</h3>
+        <p class="precio">$18</p>
+        <div class="detalle">
+            <p>Set de 6 destornilladores de diferentes tamaños con puntas magnéticas y mango cómodo.</p>
+            <button class="btn-comprar">Comprar</button>
         </div>
+    </div>
 
-        <div class="card">
-            <i class="fas fa-bolt"></i>
-            <h3>Kit Eléctrico</h3>
-            <p>Ideal para instalaciones y mantenimiento.</p>
-            <div class="precio">$59.99</div>
+    <div class="card">
+        <h3>Llave Inglesa Ajustable</h3>
+        <p class="precio">$22</p>
+        <div class="detalle">
+            <p>Llave ajustable de acero resistente, ideal para trabajos mecánicos y reparaciones domésticas.</p>
+            <button class="btn-comprar">Comprar</button>
         </div>
+    </div>
 
+</div>
+</div>
     </div>
 </section>
 
 <section class="contacto" id="contacto">
-    <h2>CONTÁCTANOS</h2>
-    <p>📍 Zona 1, Ciudad de Guatemala</p>
-    <p>📞 +502 5555-5555</p>
-    <p>📧 contacto@ferremax.com</p>
+    <h2>Contacto</h2>
+    <p>Email: contacto@ferremax.com</p>
 </section>
 
 <footer>
-    © 2026 FerreMax - Todos los derechos reservados
+    © 2026 FerreMax 
 </footer>
 
 </body>
