feat:se agrego nuevo contenido

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="productos">
 
     <div class="card">
+        <img src="Imagenes/Martillo Profesional.png" alt="Martillo Profesional" class="img-producto">
         <h3>Martillo Profesional</h3>
         <p class="precio">$15</p>
         <div class="detalle">
@@ -39,6 +40,7 @@
     </div>
 
     <div class="card">
+        <img src="Imagenes/Taladro Eléctrico 500W.png" alt="Taladro Eléctrico 500W" class="img-producto">
         <h3>Taladro Eléctrico 500W</h3>
         <p class="precio">$45</p>
         <div class="detalle">
@@ -48,6 +50,7 @@
     </div>
 
     <div class="card">
+          <img src="Imagenes/Juego de Destornilladores.png" alt="Juego de Destornilladores" class="img-producto">
         <h3>Juego de Destornilladores</h3>
         <p class="precio">$18</p>
         <div class="detalle">
@@ -57,6 +60,7 @@
     </div>
 
     <div class="card">
+                  <img src="Imagenes/Llave Inglesa Ajustable.png" alt="Llave Inglesa Ajustable" class="img-producto">
         <h3>Llave Inglesa Ajustable</h3>
         <p class="precio">$22</p>
         <div class="detalle">
