feat:se ha agregado contenido

--- a/index.html
+++ b/index.html
@@ -2,85 +2,96 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>FerreMax </title>
+    <title>FerreMax</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <div class="logo"><span>FerreMax </span></div>
+    <div class="logo"><span>FerreMax</span></div>
     <nav>
-        <a href="#inicio">  Inicio  </a>
-        <a href="#productos">  Productos  </a>
-        <a href="masproductos.html" class="btn-nav">  Ver más productos  </a>
-        <a href="#contacto">  Contactos</a>
+        <a href="#inicio">Inicio</a>
+        <a href="#productos">Productos</a>
+        <a href="masproductos.html" class="btn-nav">Ver más productos</a>
+        <a href="#contacto">Contactos</a>
     </nav>
 </header>
 
+<!-- HERO -->
 <section class="hero" id="inicio">
     <div class="hero-content">
-        <h1>Bienvenido a  <span>FerreMax </span></h1>
+        <h1>Bienvenido a <span>FerreMax</span></h1>
+        <p>Tu tienda de herramientas confiable para proyectos de construcción y bricolaje.</p>
         <a href="#productos" class="btn">Seguir Viendo</a>
     </div>
 </section>
 
+<!-- BANNER SECUNDARIO -->
+<section class="banner-secundario">
+    <div class="contenido-banner">
+        <h2>Las mejores herramientas al mejor precio</h2>
+    </div>
+</section>
+
+<!-- PRODUCTOS -->
 <section class="section" id="productos">
     <h2>Nuestros <span>Productos</span></h2>
 
     <div class="productos">
 
-    <div class="card">
-        <img src="Imagenes/Martillo Profesional.png" alt="Martillo Profesional" class="img-producto">
-        <h3>Martillo Profesional</h3>
-        <p class="precio">$15</p>
-        <div class="detalle">
-            <p>Martillo de acero reforzado con mango ergonómico antideslizante. Ideal para trabajos de construcción y carpintería.</p>
-            <button class="btn-comprar">Comprar</button>
+        <div class="card">
+            <img src="Imagenes/Martillo Profesional.png" alt="Martillo Profesional">
+            <h3>Martillo Profesional</h3>
+            <p class="precio">$15</p>
+            <div class="detalle">
+                <p>Martillo de acero reforzado con mango ergonómico antideslizante.</p>
+                <button class="btn-comprar">Comprar</button>
+            </div>
         </div>
-    </div>
 
-    <div class="card">
-        <img src="Imagenes/Taladro Eléctrico 500W.png" alt="Taladro Eléctrico 500W" class="img-producto">
-        <h3>Taladro Eléctrico 500W</h3>
-        <p class="precio">$45</p>
-        <div class="detalle">
-            <p>Taladro eléctrico de alta potencia con velocidad ajustable. Perfecto para madera, metal y concreto.</p>
-            <button class="btn-comprar">Comprar</button>
+        <div class="card">
+            <img src="Imagenes/Taladro Eléctrico 500W.png" alt="Taladro Eléctrico 500W">
+            <h3>Taladro Eléctrico 500W</h3>
+            <p class="precio">$45</p>
+            <div class="detalle">
+                <p>Taladro eléctrico de alta potencia con velocidad ajustable.</p>
+                <button class="btn-comprar">Comprar</button>
+            </div>
         </div>
-    </div>
 
-    <div class="card">
-          <img src="Imagenes/Juego de Destornilladores.png" alt="Juego de Destornilladores" class="img-producto">
-        <h3>Juego de Destornilladores</h3>
-        <p class="precio">$18</p>
-        <div class="detalle">
-            <p>Set de 6 destornilladores de diferentes tamaños con puntas magnéticas y mango cómodo.</p>
-            <button class="btn-comprar">Comprar</button>
+        <div class="card">
+            <img src="Imagenes/Juego de Destornilladores.png" alt="Juego de Destornilladores">
+            <h3>Juego de Destornilladores</h3>
+            <p class="precio">$18</p>
+            <div class="detalle">
+                <p>Set de 6 destornilladores con puntas magnéticas.</p>
+                <button class="btn-comprar">Comprar</button>
+            </div>
         </div>
-    </div>
 
-    <div class="card">
-                  <img src="Imagenes/Llave Inglesa Ajustable.png" alt="Llave Inglesa Ajustable" class="img-producto">
-        <h3>Llave Inglesa Ajustable</h3>
-        <p class="precio">$22</p>
-        <div class="detalle">
-            <p>Llave ajustable de acero resistente, ideal para trabajos mecánicos y reparaciones domésticas.</p>
-            <button class="btn-comprar">Comprar</button>
+        <div class="card">
+            <img src="Imagenes/Llave Inglesa Ajustable.png" alt="Llave Inglesa Ajustable">
+            <h3>Llave Inglesa Ajustable</h3>
+            <p class="precio">$22</p>
+            <div class="detalle">
+                <p>Llave ajustable de acero resistente.</p>
+                <button class="btn-comprar">Comprar</button>
+            </div>
         </div>
-    </div>
 
-</div>
-</div>
     </div>
 </section>
 
+<!-- CONTACTO -->
 <section class="contacto" id="contacto">
     <h2>Contacto</h2>
-    <p>Email: contacto@ferremax.com</p>
+    <p>Email: ferremax@gmail.com</p>
+    <p>Teléfono: +502 234 567 890</p>
+    <p>Dirección: zona 5, Guatemala, Guatemala</p>
 </section>
 
 <footer>
-    © 2026 FerreMax 
+    © 2026 FerreMax - Todos los derechos reservados
 </footer>
 
 </body>
