feat:se ha agregado contenido

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 <!-- PRODUCTOS -->
 <section class="section" id="productos">
-    <h2>Nuestros <span>Productos</span></h2>
+    <h2>Algunos <span>Productos</span></h2>
+   
 
     <div class="productos">
 
@@ -80,6 +81,7 @@
         </div>
 
     </div>
+<a href="masproductos.html" class="btn-nav">Ver más productos</a>
 </section>
 
 <!-- CONTACTO -->
